# lattice

./: .gitignore  Cargo.toml  README.md
lattice-api/: Cargo.toml  build.rs
lattice-api/proto/: services.proto  types.proto
lattice-api/src/: backend.rs  client.rs  dynamic_store_service.rs  lib.rs  mesh_service.rs  node_service.rs  server.rs  store_service.rs
lattice-bindings/: Cargo.toml
lattice-bindings/src/: lib.rs
lattice-cli/: Cargo.toml
lattice-cli/src/: accept_handler.rs  app_commands.rs  commands.rs  display_helpers.rs  graph_renderer.rs  main.rs  mesh_commands.rs  node.rs  node_commands.rs  peer_commands.rs  rpc_command.rs  store_actor.rs  store_commands.rs  store_commands_helper.rs  subscriptions.rs  sync.rs  sync_protocol.rs  tracing_writer.rs
lattice-core/: Cargo.toml  build.rs
lattice-core/src/: auth.rs  causal_iter.rs  clock.rs  data_dir.rs  entry.rs  head.rs  hlc.rs  lib.rs  log.rs  merge.rs  mesh.rs  meta_store.rs  node.rs  node_identity.rs  peer_manager.rs  proto.rs  sigchain.rs  signed_entry.rs  store.rs  store_actor.rs  store_handle.rs  store_registry.rs  sync_state.rs  token.rs  types.rs  vector_clock.rs
lattice-core/tests/: node_mesh_refactor_test.rs
lattice-daemon/: Cargo.toml
lattice-daemon/src/: main.rs
lattice-kernel/: Cargo.toml  build.rs
lattice-kernel/src/: entry.rs  lib.rs  proto.rs  store_inspector.rs  sync_provider.rs
lattice-kernel/tests/: dispatch_routing_test.rs  store_corruption_test.rs  store_streaming_test.rs  wal_corruption_test.rs
lattice-kvstate/: Cargo.toml  build.rs
lattice-kvstate/src/: head.rs  kv.rs  kv_actor.rs  kv_handle.rs  kv_patch.rs  kv_schema.proto  kv_types.rs  lib.rs  merge.rs
lattice-kvstate/tests/: batch_test.rs  sync_compliance.rs  watch_gap.rs
lattice-kvstore/: Cargo.toml  build.rs
lattice-kvstore-api/: Cargo.toml
lattice-kvstore-api/src/: lib.rs
lattice-kvstore-client/: Cargo.toml
lattice-kvstore-client/src/: lib.rs
lattice-kvstore/proto/: kv_store.proto
lattice-kvstore/src/: handle.rs  head.rs  kv.rs  kv_handle.rs  lib.rs  state.rs
lattice-kvstore/tests/: batch_integration.rs  batch_test.rs  crdt_correctness.rs  strict_lww.rs  sync_compliance.rs  watch_gap.rs  watch_integration.rs
lattice-kvtable/: Cargo.toml  build.rs
lattice-kvtable/proto/: value.proto
lattice-kvtable/src/: lib.rs
lattice-logstore/: Cargo.toml  build.rs
lattice-logstore/proto/: log_store.proto
lattice-logstore/src/: handle.rs  lib.rs  state.rs
lattice-logstore/tests/: dispatch_integration.rs
lattice-mockkernel/: Cargo.toml  build.rs
lattice-mockkernel/proto/: null_store.proto
lattice-mockkernel/src/: harness.rs  lib.rs  mock_provider.rs  mock_state_machine.rs  null_state.rs  test_node.rs
lattice-model/: Cargo.toml
lattice-model/src/: clock.rs  crypto.rs  dag_queries.rs  head.rs  hlc.rs  introspection.rs  lib.rs  log_traits.rs  merge.rs  net_event.rs  node_identity.rs  node_provider.rs  openable.rs  peer_provider.rs  replication.rs  sexpr.rs  state_machine.rs  storage.rs  storage_config.rs  store_info.rs  store_type.rs  types.rs
lattice-net/: Cargo.toml
lattice-net-iroh/: Cargo.toml
lattice-net-iroh/src/: gossip.rs  lib.rs  protocol.rs  transport.rs
lattice-net-iroh/tests/: gossip_stream_recovery_test.rs  iroh_backend_test.rs  iroh_integration_test.rs  mock_provider_test.rs
lattice-net-sim/: Cargo.toml
lattice-net-sim/src/: broadcast_gossip.rs  channel_transport.rs  lib.rs  sim_backend.rs
lattice-net-types/: Cargo.toml
lattice-net-types/src/: gossip.rs  lib.rs  network_store.rs  node_provider_ext.rs  transport.rs
lattice-net/src/: convert.rs  endpoint.rs  error.rs  framing.rs  gossip.rs  lib.rs  network_store.rs  peer_sync_store.rs  unicast.rs
lattice-net/tests/: bootstrap_integration.rs  causal_sync_test.rs  chain_fetch_repro.rs  gap_fill_integration.rs  gap_handling_test.rs  gossip_join_test.rs  gossip_lag_tracking_test.rs  native_gossip_gap_test.rs  recursive_bootstrap_repro.rs  reproduce_peer_persistence.rs  revocation_test.rs  sync_channel_test.rs  sync_repro.rs  sync_stress.rs  sync_termination_test.rs  witnessed_only_sync_test.rs
lattice-node/: Cargo.toml
lattice-node/src/: app_manager.rs  auth.rs  authorized_store.rs  data_dir.rs  genesis.rs  lib.rs  mesh.rs  meta_store.rs  migrations.rs  network_store_registry.rs  node.rs  peer_manager.rs  store_handle.rs  store_manager.rs  store_openers.rs  store_registry.rs  store_type.rs  token.rs  watcher.rs
lattice-node/tests/: app_manager_test.rs  multi_author_test.rs  store_manager_test.rs
lattice-proto/: Cargo.toml  build.rs
lattice-proto/proto/: kv_store.proto  network.proto  storage.proto  weaver.proto
lattice-proto/src/: convert.rs  lib.rs
lattice-rootstore/: Cargo.toml  build.rs
lattice-rootstore/proto/: root_store.proto
lattice-rootstore/src/: introspect.rs  lib.rs  manifest.rs  state.rs
lattice-rpc/: Cargo.toml  build.rs
lattice-rpc/proto/: daemon.proto  services.proto  types.proto
lattice-rpc/src/: backend.rs  dynamic_store_service.rs  lib.rs  mesh_service.rs  node_service.rs  server.rs  store_service.rs
lattice-runtime/: Cargo.toml
lattice-runtime/src/: backend.rs  backend_inprocess.rs  backend_rpc.rs  conversions.rs  dynamic_store_service.rs  lib.rs  node_service.rs  ops_summary.rs  runtime.rs  store_service.rs  system_summary.rs
lattice-storage/: Cargo.toml
lattice-storage/src/: lib.rs  state_db.rs
lattice-storage/tests/: snapshot_tests.rs
lattice-store/: Cargo.toml
lattice-store-base/: Cargo.toml
lattice-store-base/src/: dispatch.rs  handle.rs  introspection.rs  invoke.rs  lib.rs
lattice-store/src/: lib.rs  snapshot.rs  store.rs  watermark.rs
lattice-sync/: Cargo.toml
lattice-sync/src/: lib.rs  sync_provider.rs
lattice-systemstore/: Cargo.toml
lattice-systemstore/src/: helpers.rs  lib.rs  system_state.rs  tables.rs
lattice-systemstore/tests/: chain_rules_test.rs
lattice-web/: Cargo.toml  build.rs
lattice-web/proto/: tunnel.proto
lattice-web/src/: apps.rs  lib.rs  rpc.rs  tunnel.rs  ui.rs  web_server.rs
lattice-web/static/: api.js  app.js  dag.js  (+9 more)
(+260 files in other folders)
