[workspace]
resolver = "2"
members = [
    "lattice-kernel",
    "lattice-node",
    "lattice-net",
    "lattice-net-types",
    "lattice-cli",
    "lattice-daemon",
    "lattice-api",
    "lattice-model",
    "lattice-kvstore",
    "lattice-kvstore-client",
    "lattice-logstore",
    "lattice-runtime",
    "lattice-bindings",
    "lattice-storage",
    "lattice-systemstore",
    "lattice-store-base",
    "lattice-mockkernel",
    "lattice-sync",
    "lattice-net-sim",
]

# lattice-bindings is excluded from default members to prevent slow linking (cdylib)
# during normal development. Build it explicitly with `-p lattice-bindings`.
default-members = [
    "lattice-kernel",
    "lattice-node",
    "lattice-net",
    "lattice-net-types",
    "lattice-cli",
    "lattice-daemon",
    "lattice-api",
    "lattice-model",
    "lattice-kvstore",
    "lattice-logstore",
    "lattice-runtime",
    "lattice-storage",
    "lattice-systemstore",
    "lattice-store-base",
    "lattice-net-sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
# Workspace crates
lattice-kernel = { path = "lattice-kernel" }
lattice-node = { path = "lattice-node" }
lattice-net = { path = "lattice-net" }
lattice-model = { path = "lattice-model" }
lattice-kvstore = { path = "lattice-kvstore" }
lattice-kvstore-client = { path = "lattice-kvstore-client" }
lattice-logstore = { path = "lattice-logstore" }
lattice-storage = { path = "lattice-storage" }
lattice-systemstore = { path = "lattice-systemstore" }
lattice-store-base = { path = "lattice-store-base" }
lattice-mockkernel = { path = "lattice-mockkernel" }
lattice-sync = { path = "lattice-sync" }
lattice-net-types = { path = "lattice-net-types" }
lattice-proto = { path = "lattice-proto" }
lattice-api = { path = "lattice-api" }
lattice-runtime = { path = "lattice-runtime" }
clap = { version = "4", features = ["derive"] }

# Networking (Iroh)
iroh = { version = "0.95", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-gossip = "0.95"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Serialization
borsh = { version = "1", features = ["derive"] }
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
prost-reflect = "0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async runtime
tokio = { version = "1", features = [] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# Utilities
thiserror = "2"
tracing = "0.1"
bytes = "1"
dirs = "5"
blake3 = "1"
hex = "0.4"
uniffi = "0.31.0"
redb = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
once_cell = "1"

# Testing
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
