[package]
name = "lattice-api"
description = "Unified API for Lattice - gRPC server/client and proto types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["server", "client"]
server = []
client = []
ffi = ["uniffi"]

[dependencies]
lattice-node = { workspace = true }
lattice-net = { workspace = true }
lattice-model = { workspace = true }
tonic = "0.12"
prost = { workspace = true }
prost-reflect = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }
tower = "0.4"
hyper-util = "0.1"
hex.workspace = true
dirs.workspace = true
bytes.workspace = true
thiserror = { workspace = true }

# Optional FFI - adds UniFFI derives to proto types
uniffi = { version = "0.29.0", optional = true }

[build-dependencies]
tonic-build = "0.12"
