[package]
name = "lattice-api"
description = "Unified API for Lattice - gRPC server/client and proto types"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib"]
name = "lattice_api"

[features]
default = ["server", "client"]
server = []
client = []
ffi = ["uniffi"]

[dependencies]
lattice-node = { workspace = true }
lattice-net = { workspace = true }
lattice-model = { workspace = true }
lattice-store-base = { workspace = true }
tonic = "0.12"
prost = { workspace = true }
prost-reflect = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }
tower = "0.4"
hyper-util = "0.1"
hex.workspace = true
dirs.workspace = true
bytes.workspace = true
thiserror = { workspace = true }

# Optional FFI - adds UniFFI derives to proto types
uniffi = { workspace = true, optional = true }
futures.workspace = true

[build-dependencies]
tonic-build = "0.12"
