[package]
name = "lattice-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "lattice_bindings"

[dependencies]
uniffi = { version = "0.29.0", features = ["tokio", "cli"] }
lattice-runtime = { workspace = true }
lattice-model = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
uuid = { workspace = true }
prost-reflect.workspace = true
bytes.workspace = true



[lints]
workspace = true
