[package]
name = "lattice-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "lattice_bindings"

[dependencies]
uniffi = { workspace = true, features = ["tokio", "cli"] }
lattice-runtime = { workspace = true }
lattice-api = { workspace = true, features = ["ffi"] }
lattice-store-base = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
uuid = { workspace = true }
prost-reflect.workspace = true
bytes.workspace = true
tokio-stream.workspace = true
http = "1"
http-body-util = "0.1"
axum = { version = "0.8", default-features = false }

[lints]
workspace = true
