[package]
name = "lattice-cli"
description = "Interactive CLI for Lattice"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice"
path = "src/main.rs"

[dependencies]
lattice-runtime = { workspace = true }
rustyline-async = { git = "https://github.com/lost-tty/rustyline-async" }
hex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
shlex = "1"
clap = { workspace = true }
serde_json = "1"
iroh = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true }
chrono = { workspace = true }
lexpr = "0.2.7"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tempfile = "3"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
owo-colors = "4.2"
bs58 = { version = "0.5", features = ["check"] }
blake3.workspace = true
unicode-width = "0.1"
anyhow = "1.0.100"
