[package]
name = "lattice-core"
description = "Core types for Lattice: nodes, sigchains, entries, and vector clocks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-model = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
redb = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hostname = "0.4"
serde_json = "1"
regex = "1"
regex-syntax = "0.8"
zeroize = "1.8.2"
bs58 = { version = "0.5", features = ["check"] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
