[package]
name = "lattice-kernel"
description = "Replication engine: IntentionStore, Weaver protocol, Sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-model = { workspace = true }
lattice-store-base = { workspace = true }
lattice-proto = { workspace = true }
lattice-sync = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
redb = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-core = "0.3.31"
futures-util.workspace = true
tokio-util = "0.7"
async-stream = "0.3.6"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "rt-multi-thread"] }
tokio-test = { workspace = true }
tempfile = "3"
