[package]
name = "lattice-kvstore-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lattice-store-base = { workspace = true }
lattice-model = { workspace = true }
lattice-kvstore = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
