[package]
name = "lattice-kvstore-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lattice-store-base = { workspace = true }
lattice-model = { workspace = true }
lattice-proto = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
