[package]
name = "lattice-kvstore"
description = "KV state layer for Lattice - implements StateMachine for key-value storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-model = { workspace = true }
lattice-store-base = { workspace = true }
lattice-storage = { workspace = true }
lattice-proto = { workspace = true }
lattice-kvstore-api = { path = "../lattice-kvstore-api" }
redb = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
futures = "0.3"
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing = { workspace = true }
regex = "1"
regex-syntax = "0.8"
blake3 = { workspace = true }
futures-util.workspace = true
tokio-stream = { version = "0.1.18", features = ["sync"] }
once_cell = "1"
async-stream = "0.3"

[build-dependencies]
prost-build = { workspace = true }
lattice-proto = { workspace = true }

[dev-dependencies]
tempfile = "3"
lattice-mockkernel = { workspace = true }
