[package]
name = "lattice-model"
description = "Core data models and types for Lattice (Log-Agnostic)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex = { workspace = true }
thiserror = { workspace = true }
futures-core = "0.3"
ed25519-dalek = { workspace = true }
rand = "0.8"
zeroize = "1"
prost-reflect = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
