[package]
name = "lattice-net-sim"
description = "In-memory network simulation for Lattice (ChannelTransport)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-net-types = { workspace = true }
lattice-model = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
