[package]
name = "lattice-net-types"
description = "Shared types for Lattice networking layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-kernel = { workspace = true }
lattice-model = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
