[package]
name = "lattice-net-types"
description = "Shared types for Lattice networking layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-sync = { workspace = true }
lattice-proto = { workspace = true }
lattice-model = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util"] }
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
