[package]
name = "lattice-net"
description = "Networking layer for Lattice using Iroh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-core = { workspace = true }
lattice-model = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
blake3.workspace = true
anyhow = "1.0.100"
futures-lite = "2.6.1"
regex = "1"
ed25519-dalek.workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
