[package]
name = "lattice-net"
description = "Networking layer for Lattice using Iroh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-kernel = { workspace = true }
lattice-model = { workspace = true }
lattice-net-types = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
blake3.workspace = true
anyhow = "1.0.100"
futures-lite = "2.6.1"
regex = "1"
ed25519-dalek.workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
lattice-kvstore = { workspace = true }
lattice-kvstore-client = { workspace = true }
lattice-logstore = { workspace = true }
lattice-storage = { workspace = true }
lattice-systemstore = { workspace = true }
lattice-node = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"
