[package]
name = "lattice-net"
description = "Transport-agnostic networking layer for Lattice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-model = { workspace = true }
lattice-net-types = { workspace = true }
lattice-sync = { workspace = true }
lattice-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
blake3.workspace = true
anyhow = "1.0.100"
futures-lite = "2.6.1"
regex = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
lattice-kvstore = { workspace = true }
lattice-kvstore-api = { workspace = true }
lattice-logstore = { workspace = true }
lattice-storage = { workspace = true }
lattice-store-base = { workspace = true }
lattice-systemstore = { workspace = true }
lattice-node = { workspace = true }
rand = { workspace = true }
lattice-kernel = { workspace = true }
lattice-net-sim = { path = "../lattice-net-sim" }
ed25519-dalek = { workspace = true }
