[package]
name = "lattice-node"
description = "Application layer: Node, Mesh, PeerManager orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-kernel = { workspace = true }
lattice-model = { workspace = true }
lattice-store-base = { workspace = true }
lattice-kvstore-client = { workspace = true }
lattice-net-types = { workspace = true }
lattice-proto = { workspace = true }
lattice-storage = { workspace = true }
lattice-systemstore = { workspace = true }
ed25519-dalek = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
redb = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
hostname = "0.4"
serde_json = "1"
regex = "1"
bs58 = { version = "0.5", features = ["check"] }
async-trait = "0.1.89"
tracing = { workspace = true }
futures-util = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
lattice-logstore = { workspace = true }
lattice-kvstore = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3"
